recipes/cncf/kyverno/test-pod-fail.yaml
# 거부돼야 하는 파드. latest 태그 + label 없음 + resources 없음.
apiVersion: v1
kind: Pod
metadata:
  name: test-fail
  namespace: prod
spec:
  containers:
    - name: c
      image: public.ecr.aws/docker/library/alpine:latest
      command: ["sleep", "3600"]
